--- a/index.html
+++ b/index.html
@@ -13,65 +13,57 @@
 <body class="bg-danger">
 
     <div class="ticket_price">
-        <h1 class="text-white text-center fs-1 fw-bold">Il prezzo del tuo biglietto</h1>
-        <div class="container bg-white rounded-3 d-flex justify-content-center flex-column w-50">
+        <h1 class="text-white text-center fs-1 fw-bold py-3">Calcola il prezzo del tuo biglietto</h1>
+        <div class="container bg-white rounded-4 d-flex justify-content-center flex-column w-50">
             <div class="row">
                 <div class="col py-4">
-                    <h6 class="py-3">Nome e Cognome:</h6>
-                    <input id="userName" type="text">
+                    <h6 class="py-3 fw-bold text-danger">Nome e Cognome:</h6>
+                    <input id="userName" class="rounded-3 border-danger text-center py-1" type="text">
                 </div>
                 <div class="col py-4">
-                    <h6 class="py-3">Chilometri da percorrere:</h6>
-                    <input id="km" type="text">
+                    <h6 class="py-3 fw-bold text-danger">Chilometri da percorrere:</h6>
+                    <input id="km" class="rounded-3 border-danger text-center py-1" type="text">
                 </div>
                 <div class="col py-4">
-                    <h6 class="py-3">Età passeggero:</h6>
-                    <input id="age" type="text">
+                    <h6 class="py-3 fw-bold text-danger">Età passeggero:</h6>
+                    <input id="age" class="rounded-3 border-danger text-center py-1" type="text">
                 </div>
             </div>
-            <div class="buttons d-flex justify-content-center">
-                <button>Genera</button>
-                <button>Annulla</button>
+            <div class="buttons d-flex justify-content-center gap-3 py-3">
+                <button class="btn btn-dark text-white px-3 rounded-pill">Genera</button>
+                <button class="btn btn-dark text-white px-3 rounded-pill">Annulla</button>
             </div>
         </div>
 
         <div class="ticket_generated">
-            <h1 class="text-white text-center fs-1 fw-bold">Il tuo biglietto</h1>
-            <div class="container bg-white rounded-3 d-flex justify-content-center flex-column w-50">
+            <h1 class="text-white text-center fs-1 fw-bold py-3">Il tuo biglietto</h1>
+            <div class="container bg-white d-flex justify-content-center flex-column w-50">
                 <div class="row">
-                    <div class="col py-4">
-                        <h6 class="py-3">Nome e Cognome:</h6>
-                        <input id="userName" type="text">
+                    <div class="col-4 py-4 border-end border-3 border-dark bg-secondary">
+                        <h6 class="py-3 fw-bold text-dark fs-4">Nome passeggero:</h6>
+                        <div id="passenger_name"></div>
                     </div>
-                    <div class="col py-4">
-                        <h6 class="py-3">Chilometri da percorrere:</h6>
-                        <input id="km" type="text">
+                    <div class="col-8 py-4">
+                        <h6 class="py-3 fw-bold text-dark fs-4 text-center">Costo biglietto:</h6>
+                        <div id="ticket_price"></div>
                     </div>
-                    <div class="col py-4">
-                        <h6 class="py-3">Età passeggero:</h6>
-                        <input id="age" type="text">
-                    </div>
-                </div>
-                <div class="buttons d-flex justify-content-center">
-                    <button>Genera</button>
-                    <button>Annulla</button>
                 </div>
             </div>
 
 
 
 
-    </div>
+        </div>
 
 
 
 
 
 
-    <script src="./assets/js/main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-        crossorigin="anonymous"></script>
+        <script src="./assets/js/main.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
