--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
                 <div class="row">
                     <div class="col-4 py-4 border-end border-3 border-dark bg-secondary">
                         <h6 class="py-3 fw-bold text-dark fs-4">Nome passeggero:</h6>
-                        <div id="passenger_name"></div>
+                        <div id="passenger_name" class="fs-5 text-left"></div>
                     </div>
                     <div class="col-8 py-4">
                         <h6 class="py-3 fw-bold text-dark fs-4 text-center">Costo biglietto:</h6>
-                        <div id="ticket_price"></div>
+                        <div id="ticket_price" class="text-center fs-5"></div>
                     </div>
                 </div>
             </div>
