Final Commit Fix

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="ticket_price">
         <h1 class="text-white text-center fs-1 fw-bold py-3">Calcola il prezzo del tuo biglietto</h1>
-        <div class="container bg-white rounded-4 d-flex justify-content-center flex-column w-50">
+        <div class="container bg-white rounded-4 d-flex justify-content-center flex-column w-50 shadow">
             <div class="row">
                 <div class="col py-4">
                     <h6 class="py-3 fw-bold text-danger">Nome e Cognome:</h6>
@@ -37,7 +37,7 @@
 
         <div class="ticket_generated">
             <h1 class="text-white text-center fs-1 fw-bold py-3">Il tuo biglietto</h1>
-            <div class="container bg-white d-flex justify-content-center flex-column w-50">
+            <div class="container bg-white d-flex justify-content-center flex-column w-50 shadow">
                 <div class="row">
                     <div class="col-4 py-4 border-end border-3 border-dark bg-secondary">
                         <h6 class="py-3 fw-bold text-dark fs-4">Nome passeggero:</h6>
